refactor code by using scss variables

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -4,6 +4,6 @@
   font-family: 'Roboto', Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #000000;
+  color: $black;
   overflow: hidden;
 }
