add scss mixin of media query

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,7 @@
 @import './reset';
 @import './variables';
-@import './quick_classes';
 @import './base';
+@import './mixins';
+@import './quick_classes';
 @import './scrollbar_custom';
 @import './gmap_custom';
