--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -58,6 +58,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: none;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -103,4 +104,10 @@ table {
 input {
   -webkit-appearance: none;
   border-radius: 0;
+}
+
+button {
+  border: 0;
+  outline: none;
+  cursor: pointer;
 }
