--- a/src/components/MapView/components/PostExpanded/components/Spinner/Spinner.scss
+++ b/src/components/MapView/components/PostExpanded/components/Spinner/Spinner.scss
@@ -1,13 +1,11 @@
 .spinner {
-  width: 100%;
-  height: 100%;
+  @include size($width: 100%, $height: 100%);
 
   .loading {
+    @include size($width: 50px, $height: 50px);
     border: 6px solid rgba(195, 195, 195, 0.6);
     border-radius: 50%;
     border-top: 6px solid #636767;
-    width: 50px;
-    height: 50px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
   }
