--- a/src/components/MapView/components/PostExpanded/components/Spinner/Spinner.scss
+++ b/src/components/MapView/components/PostExpanded/components/Spinner/Spinner.scss
@@ -21,10 +21,10 @@
 
   @keyframes spin {
     0% {
-      transform: rotate(0deg);
+      @include rotate(0deg);
     }
     100% {
-      transform: rotate(360deg);
+      @include rotate(360deg);
     }
   }
 }
