improve responsive UI

--- a/src/components/MapView/MapView.scss
+++ b/src/components/MapView/MapView.scss
@@ -57,7 +57,7 @@
     @include translate(0, 100%);
   }
 
-  @include desktop {
+  @include tablet {
     .preview-shown {
       transform: unset;
     }
