--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,9 +1,23 @@
 /*==================MEDIA QUERY==================*/
 
-$desktop-width: 768px;
+$tablet: 768;
+$large: 1024;
+$desktop: 1280;
+
+@mixin tablet {
+  @media only screen and (min-width: $tablet * 1px) {
+    @content;
+  }
+}
+
+@mixin large {
+  @media only screen and (min-width: $large * 1px) {
+    @content;
+  }
+}
 
 @mixin desktop {
-  @media (min-width: #{$desktop-width}) {
+  @media only screen and (min-width: $desktop * 1px) {
     @content;
   }
 }
