--- a/src/assets/styles/scrollbar_custom.scss
+++ b/src/assets/styles/scrollbar_custom.scss
@@ -1,10 +1,10 @@
-@media screen and (min-width: 768px) {
+@include desktop {
   /* Works on Chrome/Edge/Safari */
   *::-webkit-scrollbar {
     width: 8px;
   }
   *::-webkit-scrollbar-track {
-    background: #000000;
+    background: $black;
     border-radius: 6px;
   }
   *::-webkit-scrollbar-thumb {
