--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -21,7 +21,7 @@
     line-height: 1.125rem;
   }
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     padding-left: 24px;
 
     h1 {
