--- a/src/components/MapView/components/PostExpanded/PostExpanded.scss
+++ b/src/components/MapView/components/PostExpanded/PostExpanded.scss
@@ -59,6 +59,7 @@
     .post-image {
       @include size($width: 100%);
       background-color: $white;
+      height: auto;
     }
 
     .post-body {
