--- a/src/assets/styles/scrollbar_custom.scss
+++ b/src/assets/styles/scrollbar_custom.scss
@@ -1,20 +1,20 @@
 @include desktop {
   /* Works on Chrome/Edge/Safari */
   *::-webkit-scrollbar {
-    width: 8px;
+    width: 10px;
   }
   *::-webkit-scrollbar-track {
-    background: $black;
+    background: #f1f1f1;
     border-radius: 6px;
   }
   *::-webkit-scrollbar-thumb {
-    background-color: #d6dee1;
+    background-color: #c1c1c1;
     border-radius: 20px;
     background-clip: content-box;
   }
 
-  /* Handle on hover */
+  // /* Handle on hover */
   *::-webkit-scrollbar-thumb:hover {
-    background: #a8bbbf;
+    background: #a7a7a7;
   }
 }
