refactor scss code

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
 @import './reset';
 @import './base';
-@import './scrollbar_custom';
-@import './gmap_custom';
+@import './customs';
+@import './components';
