--- a/src/assets/styles/components/post.scss
+++ b/src/assets/styles/components/post.scss
@@ -68,6 +68,8 @@
 
   .post-image {
     @include size($width: 100%);
+    max-height: 280px;
+    object-fit: cover;
   }
 
   .post-content {
@@ -78,6 +80,12 @@
     text-align: left;
     font-size: 0.875rem;
     line-height: 1.5rem;
+  }
+
+  @include tablet {
+    .post-image {
+      max-height: 100%;
+    }
   }
 
   @include desktop {
