--- a/src/assets/styles/components/mini-post.scss
+++ b/src/assets/styles/components/mini-post.scss
@@ -26,9 +26,7 @@
       font-size: 0.75rem;
       margin-top: 3px;
       line-height: 1rem;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+      @include ellipsis(2);
     }
   }
 
