--- a/src/assets/styles/components/post.scss
+++ b/src/assets/styles/components/post.scss
@@ -68,18 +68,18 @@
 
   .post-image {
     @include size($width: 100%);
-    max-height: 280px;
+    max-height: 260px;
     object-fit: cover;
   }
 
   .post-content {
     @include size($height: calc(100% - 200px));
-    overflow: auto;
-    padding: 12px;
+    padding: 0 12px;
     margin-bottom: 12px;
     text-align: left;
     font-size: 0.875rem;
     line-height: 1.5rem;
+    @include ellipsis(2);
   }
 
   @include tablet {
