--- a/src/assets/styles/components/index.scss
+++ b/src/assets/styles/components/index.scss
@@ -1,7 +1,8 @@
 @import './top-bar';
 @import './folk-me';
 @import './spinner';
-@import './post';
+@import './post-content';
+@import './post-popup';
 @import './mini-post';
 @import './post-preview';
 @import './post-expanded';
