--- a/src/assets/styles/components/post-expanded.scss
+++ b/src/assets/styles/components/post-expanded.scss
@@ -46,36 +46,26 @@
   .content {
     @include size($width: 100vw, $height: 100vh);
     background-color: $white;
-    transition: all 0.15s ease-out;
 
     .post-header {
       font-size: 2rem;
-      font-weight: 600;
-      text-align: left;
-      padding: 24px;
-      line-height: 1.5rem;
+      padding: 24px 24px 12px;
     }
 
     .post-image {
-      @include size($width: 100%);
-      background-color: $white;
       max-height: calc(100% - 200px);
-      object-fit: cover;
     }
 
     .post-body {
-      overflow: auto;
       padding: 0 24px;
       margin-bottom: 60px;
-      font-size: 0.875rem;
-      line-height: 1.5rem;
     }
   }
 
   @include tablet {
     .toolbar {
       @include relative();
-      background-color: unset;
+      background-color: transparent;
     }
 
     .content {
