--- a/src/assets/styles/components/post-popup.scss
+++ b/src/assets/styles/components/post-popup.scss
@@ -1,4 +1,4 @@
-.post {
+.post-popup {
   @include size($width: 254px, $maxHeight: 600px);
   @include relative();
   z-index: zIndex('post');
@@ -60,8 +60,6 @@
 
   .post-header {
     font-size: 1rem;
-    font-weight: 500;
-    text-align: left;
     padding: 12px 12px 6px 12px;
     line-height: 1.5rem;
   }
@@ -72,7 +70,7 @@
     object-fit: cover;
   }
 
-  .post-content {
+  .post-body {
     @include size($height: calc(100% - 200px));
     padding: 0 12px;
     margin-bottom: 12px;
