--- a/src/styles/components/map-view.scss
+++ b/src/styles/components/map-view.scss
@@ -36,18 +36,23 @@
     }
   }
 
-  .gm-style .gm-style-iw-c {
-    max-width: 254px !important;
-    max-height: 600px !important;
-    padding: 0 !important;
-    border-radius: 12px;
+  .gm-style {
+    border: none;
+    outline: none;
 
-    .gm-style-iw-d {
-      overflow: hidden !important;
-    }
+    .gm-style-iw-c {
+      max-width: 254px !important;
+      max-height: 600px !important;
+      padding: 0 !important;
+      border-radius: 12px;
 
-    button[title='Close'] {
-      display: none !important;
+      .gm-style-iw-d {
+        overflow: hidden !important;
+      }
+
+      button[title='Close'] {
+        display: none !important;
+      }
     }
   }
 }
