--- a/src/styles/components/post-content.scss
+++ b/src/styles/components/post-content.scss
@@ -1,21 +1,27 @@
-.post-content {
-  @include size($width: 100%, $height: 100%);
-  text-align: left;
-  transition: all 0.15s ease-out;
+.c-post-content {
+  @include flex-box;
+  @include flex-direction(column);
+  @include size(
+    $width: 100%,
+    $height: 100%,
+    $max-height: $global-post-content-max-height
+  );
+  @include transition(all 150ms ease-out);
 
-  .post-header {
-    font-weight: 600;
-  }
-
-  .post-image {
+  &__image {
     @include size($width: 100%);
+
     background-color: $color-white;
     object-fit: cover;
   }
 
-  .post-body {
-    overflow: auto;
-    font-size: 0.875rem;
+  &__body {
+    overflow-y: auto;
+    font-size: 1.1rem;
     line-height: 1.5rem;
+
+    @include bp(sm) {
+      font-size: 0.875rem;
+    }
   }
 }
