--- a/src/styles/components/top-bar.scss
+++ b/src/styles/components/top-bar.scss
@@ -1,37 +1,20 @@
 .c-top-bar {
   @include flex-box;
+  @include align-items(center);
+  @include size($height: $global-topbar-height);
 
-  height: $global-topbar-height;
   background-color: $color-black;
   color: $color-white;
-  padding: 12px;
+  letter-spacing: 0.4px;
+  padding-left: 12px;
 
-  img {
-    border-radius: 50%;
-    margin-right: 12px;
+  &__avatar {
     @include size($width: 50px, $height: 50px);
-  }
 
-  h1 {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: 700;
-  }
-
-  span {
-    font-size: 0.8rem;
-    line-height: 1.125rem;
+    border-radius: 50%;
   }
 
   @include bp(sm) {
     padding-left: 24px;
-
-    h1 {
-      font-size: 1.25rem;
-    }
-
-    span {
-      font-size: 0.875rem;
-    }
   }
 }
