--- a/src/styles/settings/global.scss
+++ b/src/styles/settings/global.scss
@@ -7,6 +7,7 @@
 $global-radius: 6px !default;
 $global-transition: all 300ms ease-in-out !default;
 $global-topbar-height: 76px;
+$global-post-content-max-height: 600px;
 
 /* Fonts
    ========================================================================== */
