--- a/src/styles/components/post-popup.scss
+++ b/src/styles/components/post-popup.scss
@@ -1,17 +1,19 @@
-.post-popup {
-  @include size($width: 254px, $max-height: $global-post-content-max-height);
+.c-post-popup {
   @include relative();
+  @include size($width: 254px, $max-height: $global-post-content-max-height);
 
   z-index: zIndex('post');
 
   .more-actions-button {
     @include absolute($top: 6px, $right: 6px);
+    @include flex-align-content;
     @include size($width: 35px, $height: 30px);
+    @include transition(all 150ms ease-out);
+
     z-index: zIndex('post') + 1;
-    border: 1px solid #24252c;
-    border-radius: 6px;
-    background-color: #24252c;
-    transition: all 0.15s ease-out;
+    border: 1px solid $color-dark-grey;
+    border-radius: $global-radius;
+    background-color: $color-dark-grey;
 
     svg {
       color: $color-white;
@@ -19,26 +21,27 @@
   }
 
   svg {
-    @include size($height: 15px);
+    @include size(16px, 16px);
   }
 
   .more-actions-list {
     @include absolute($top: 0, $right: 0);
     @include size($width: 90%);
+    @include transition(all 150ms ease-out);
+
     z-index: zIndex('post') + 2;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    text-align: left;
     padding: 3px 0;
-    border-radius: 6px;
+    border-radius: $global-radius;
     background-color: $color-white;
-    transition: all 0.15s ease-out;
 
-    li {
+    &__item {
+      @include flex-box;
+      @include align-items(center);
+      @include transition(all 100ms ease-out);
+
       padding: 12px;
-      font-size: 0.875rem;
-      display: flex;
-      align-items: center;
-      transition: all 0.1s ease-out;
+      font-size: 1.1rem;
 
       span {
         margin-left: 6px;
@@ -50,55 +53,20 @@
     }
   }
 
-  &:hover {
-    cursor: pointer;
-
-    .more-actions-button {
-      visibility: visible;
-      opacity: 1;
-    }
-  }
-
-  .post-header {
-    font-size: 1rem;
-    padding: 12px 12px 6px 12px;
-    line-height: 1.5rem;
-  }
-
-  .post-image {
-    @include size($width: 100%);
-    max-height: 260px;
-    object-fit: cover;
-  }
-
-  .post-body {
-    @include size($height: calc(100% - 200px));
-    padding: 0 12px;
-    margin-bottom: 12px;
-    text-align: left;
-    font-size: 0.875rem;
-    line-height: 1.5rem;
-    @include ellipsis(2);
-  }
-
-  @include bp(sm) {
-    .post-image {
-      max-height: 100%;
-    }
-  }
-
   @include bp(lg) {
     .more-actions-button {
-      visibility: hidden;
-      opacity: 0;
+      @include invisible;
+    }
+
+    .more-actions-list {
+      &__item {
+        font-size: 0.875rem;
+      }
     }
 
     &:hover {
-      cursor: pointer;
-
       .more-actions-button {
-        visibility: visible;
-        opacity: 1;
+        @include visible;
       }
     }
   }
