--- a/src/styles/components/spinner.scss
+++ b/src/styles/components/spinner.scss
@@ -1,8 +1,10 @@
-.spinner {
+.c-spinner {
+  @include flex-align-content;
   @include size($width: 100%, $height: 100%);
 
-  .loading {
+  &__loading {
     @include size($width: 50px, $height: 50px);
+
     border: 6px solid rgba(195, 195, 195, 0.6);
     border-radius: 50%;
     border-top: 6px solid #636767;
