--- a/src/styles/components/post-content.scss
+++ b/src/styles/components/post-content.scss
@@ -11,7 +11,7 @@
   &__image {
     @include size($width: 100%);
 
-    background-color: $color-white;
+    background-color: $color-bg;
     object-fit: cover;
   }
 
