--- a/src/styles/components/mini-post.scss
+++ b/src/styles/components/mini-post.scss
@@ -1,10 +1,11 @@
-.mini-post {
-  padding: 12px 16px;
-  cursor: pointer;
-  transition: all 0.1s ease-out;
+.c-mini-post {
+  @include flex-align-content(row, flex-start, space-between);
   @include size($width: 72vw);
+  @include transition(all 100ms ease-out);
 
-  .post-title {
+  padding: 12px 16px;
+
+  &__content {
     @include size($width: calc(100% - 72px));
 
     span {
@@ -14,34 +15,27 @@
       text-overflow: ellipsis;
     }
 
-    .title {
-      font-size: 1rem;
-      line-height: 1.25rem;
-      font-weight: 600;
-      white-space: nowrap;
-    }
-
     .subtitle {
-      color: #ffffff;
-      font-size: 0.75rem;
+      @include ellipsis(2);
+
+      color: $color-bg;
+      font-size: 0.875rem;
       margin-top: 3px;
       line-height: 1rem;
-      @include ellipsis(2);
     }
   }
 
-  .post-image {
+  &__image {
     @include size($width: 56px, $height: 56px);
 
     img {
-      @include size($width: 100%, $height: 100%);
       object-fit: cover;
-      border-radius: 6px;
+      border-radius: $global-radius;
     }
   }
 
   &:hover {
-    background-color: $color-black;
+    background-color: $color-text;
   }
 
   @include bp(sm) {
