--- a/src/styles/settings/global.scss
+++ b/src/styles/settings/global.scss
@@ -51,7 +51,7 @@ $color-link: $color-medium-grey;
 $color-hover: $color-light-grey;
 
 // Borders
-$color-border: $color-very-light-grey;
+$color-border: $color-dark-grey;
 
 // Fills
 $color-fill: $color-very-light-grey;
