--- a/src/styles/components/post-preview.scss
+++ b/src/styles/components/post-preview.scss
@@ -3,7 +3,7 @@
   @include flex-box;
   @include size($width: 100vw);
 
-  z-index: zIndex('post-preview');
+  z-index: zIndex("post-preview");
   background-color: rgba(43, 43, 43, 0.8);
   backdrop-filter: blur(10px);
 
@@ -18,6 +18,8 @@
     &__container {
       @include flex-box;
       @include flex-direction(row);
+      @include size($max-width: 320px);
+
       .divider {
         margin: 16px 0;
         border-left: 2px solid $color-border;
